--- a/proto/buf.gen.yaml
+++ b/proto/buf.gen.yaml
@@ -20,4 +20,10 @@ plugins:
       - addGrpcMetadata=true
       - nestJs=true
       - useOptionals=all
+  - plugin: buf.build/community/stephenh-ts-proto
+    out: ../transaction-api/src/stubs
+    opt:
+      - addGrpcMetadata=true
+      - nestJs=true
+      - useOptionals=all
 
