--- a/account-api/package.json
+++ b/account-api/package.json
@@ -22,16 +22,23 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.15",
     "@nestjs/common": "^10.0.2",
-    "@nestjs/core": "^10.0.2",
     "@nestjs/config": "^2.3.1",
+    "@nestjs/core": "^10.0.2",
     "@nestjs/microservices": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@opentelemetry/instrumentation": "^0.41.0",
+    "@opentelemetry/sdk-trace-base": "^1.15.0",
+    "@opentelemetry/sdk-trace-node": "^1.15.0",
+    "@opentelemetry/semantic-conventions": "^1.15.0",
     "@prisma/client": "4.15.0",
+    "@prisma/instrumentation": "^5.0.0",
+    "nest-winston": "^1.9.3",
     "nestjs-grpc-exceptions": "^0.2.0",
     "nestjs-grpc-reflection": "^0.0.21",
     "prisma": "^4.15.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.3",
