--- a/compose/compose.published.yml
+++ b/compose/compose.published.yml
@@ -1,11 +1,27 @@
 version: '3.8'
 
 services:
+  mongo:
+    image: mongo
+    ports:
+      - 27017:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: task
+
+  mariadb:
+    image: mariadb
+    ports:
+      - 3306:3306
+    environment:
+      MARIADB_ROOT_PASSWORD: passwd
+      MARIADB_DATABASE: user
+
   user-api:
     image: mohammaddocker/tm-user-api
     environment:
       - MYSQL_URL=mysql://root:passwd@mariadb:3306/user
-      - insecure=false
+      - insecure=true
       - USER_CERT=/certs/user.pem
       - USER_KEY=/certs/user-key.pem
       - ROOT_CA=/certs/rootCA.pem
@@ -17,37 +33,41 @@ services:
     volumes:
       - ../local/certs:/certs
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:3000/health" ]
+      test: [ "CMD", "pnpm prisma generate", "pnpm prisma db push", "curl", "-f", "http://localhost:3000/health", "pnpm start:dev" ]
       interval: 5s
       timeout: 10s
       retries: 5
+    depends_on:
+      - mariadb
 
-  task-api:
-    image: mohammaddocker/tm-task-api
+  account-api:
+    image: mohammaddocker/tm-user-api
     environment:
-      - MONGO_URL=mongodb://root:task@mongo
-      - insecure=false
-      - TASK_CERT=/certs/task.pem
-      - TASK_KEY=/certs/task-key.pem
+      - MYSQL_URL=mysql://root:passwd@mariadb:3306/account
+      - insecure=true
+      - USER_CERT=/certs/account.pem
+      - USER_KEY=/certs/account-key.pem
       - ROOT_CA=/certs/rootCA.pem
       - PORT=4000
       - AUTH_API_URL=auth-api:4000
-      - JAEGER_URL=http://tracing:4318/v1/traces
+      - JAEGER_URL=http://tracing:14268/api/traces
     # ports:
     #   - 4001:4000
     volumes:
       - ../local/certs:/certs
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:3000/health" ]
+      test: [ "CMD", "pnpm prisma generate", "pnpm prisma db push", "curl", "-f", "http://localhost:3000/health", "pnpm start:dev" ]
       interval: 5s
       timeout: 10s
       retries: 5
+    depends_on:
+      - mariadb
 
   auth-api:
     image: mohammaddocker/tm-auth-api
     environment:
       - MYSQL_URL=mysql://root:passwd@mariadb:3306/auth
-      - insecure=false
+      - insecure=true
       - AUTH_CERT=/certs/auth.pem
       - AUTH_KEY=/certs/auth-key.pem
       - PORT=4000
@@ -57,32 +77,40 @@ services:
       - USER_KEY=/certs/user-key.pem
       - ROOT_CA=/certs/rootCA.pem
       - JAEGER_URL=http://tracing:4318/v1/traces
-    # ports:
-    #   - 4002:4000
+    ports:
+      - "4002:4000"
     volumes:
       - ../local/certs:/certs
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:3000/health" ]
+      test: [ "CMD", "pnpm prisma generate", "pnpm prisma db push", "curl", "-f", "http://localhost:3000/health", "pnpm start:dev" ]
       interval: 5s
       timeout: 10s
       retries: 5
+    depends_on:
+      - mariadb
 
-  front:
-    image: mohammaddocker/tm-front
+  transaction-api:
+    image: mohammaddocker/tm-user-api
     environment:
-      - secure=true
-      - FRONT_CERT=/certs/front.pem
-      - FRONT_KEY=/certs/front-key.pem
-      - PORT=3000
-      - USER_API_URL=user-api:4000
-      - AUTH_API_URL=auth-api:4000
-      - TASK_API_URL=task-api:4000
+      - MYSQL_URL=mysql://root:passwd@mariadb:3306/transaction
+      - insecure=true
+      - USER_CERT=/certs/transaction.pem
+      - USER_KEY=/certs/transaction-key.pem
       - ROOT_CA=/certs/rootCA.pem
-      - JAEGER_URL=http://tracing:4318/v1/traces
-    ports:
-      - 4000:3000
+      - PORT=4000
+      - AUTH_API_URL=auth-api:4000
+      - JAEGER_URL=http://tracing:14268/api/traces
+    #ports:
+    #  - 4000:3000
     volumes:
       - ../local/certs:/certs
+    healthcheck:
+      test: [ "CMD", "pnpm prisma generate", "pnpm prisma db push", "pnpm start:dev" ]
+      interval: 5s
+      timeout: 10s
+      retries: 5
+    depends_on:
+        - mariadb
 
 networks:
   default:
