--- a/account-api/package.json
+++ b/account-api/package.json
@@ -20,12 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@elastic/ecs-winston-format": "^1.3.1",
     "@grpc/grpc-js": "^1.8.15",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^10.0.2",
     "@nestjs/microservices": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.41.0",
     "@opentelemetry/instrumentation": "^0.41.0",
     "@opentelemetry/sdk-trace-base": "^1.15.0",
     "@opentelemetry/sdk-trace-node": "^1.15.0",
